<resources>
    <string name="client_api_google" translatable="false">308037804789-tc70rq3dgc419retpfvd1nsup02l8af5.apps.googleusercontent.com</string>
    <string name="map_key" translatable="false">AIzaSyCN4oUW4GnAqWiZniinD1HEHidgJm4DtHo</string>
    <string name="facebook_app_id" translatable="false">305302623766887</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb231516321368439</string>
    <string name="twitter_api_key" translatable="false">UVr8SSMi7JLm1YvL8vpRrjCOi</string>
    <string name="twitter_api_secret" translatable="false">X5Smj0AZ6h314OnP9FqfIKYDjWRoe1J3GS3zo0WolS6c5P2c0U</string>
    <string name="app_name">Bait Al Khairat</string>
    <string name="Loading">Loading ...</string>
    <string name="log_in">Login</string>
    <string name="welcome">Welcome</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="permission_denied_you_cannot_access_location_data_and_camera">Permission denied you can not access location data and camera</string>
    <string name="language">Language</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="anything">Anything</string>
    <string name="new_user">New user</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="profile_picture">Profile picture</string>
    <string name="upload_picture">Upload picture</string>
    <string name="i_have_read_and_agree">I have read and agree</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="change_profile_picture">Change picture</string>
    <string name="select_option">Select option</string>
    <string name="download">Download</string>
    <string name="downloading_failed">Downloading failed</string>
    <string name="last_name_is_required">Last name is required</string>
    <string name="condition_and_terms">condition and terms</string>
    <string name="you_should_accpet_our_condition_and_terms">You should accept our condition and terms</string>
    <string name="guest">Guest</string>
    <string name="Or_login_with">Or login with</string>
    <string name="send_code">Send code</string>
    <string name="verify_code">Verify code</string>
    <string name="didnt_receive_code">Did not receive code?</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="change_password">Change password</string>
    <string name="orders">orders</string>
    <string name="more">more</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="offers">Offers</string>
    <string name="error">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="there_is_no_data_available_right_now">There is no data available right now</string>
    <string name="no_data_available">No data available!</string>
    <string name="unauthorized">UnAuthorized</string>
    <string name="server_error">Server error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="error_parsing_entity">Error parsing entity</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="enter_your_phone_number_to_register">Enter your phone number to register</string>
    <string name="enter_your_phone_number_to_create_new_password">Enter your phone number to create new password</string>
    <string name="enter_your_new_phone_number_to_confirm">Enter your new phone number to confirm</string>
    <string name="please_enter_the_activation_code_that_was_sent_to_your_phone">Please enter the activation code that was sent to your phone</string>
    <string name="please_fill_your_phone_number">Please fill your phone number</string>
    <string name="please_fill_your_information_to_continue">Please fill your information to continue</string>
    <string name="myorders">My orders</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="contact">Contact</string>
    <string name="logout_text">Are you sure you want to Sign out?</string>
    <string name="yes">Yes</string>
    <string name="week">week</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="second">second</string>
    <string name="now">now</string>
    <string name="save_changes">Save changes</string>
    <string name="help">help</string>
    <string name="please_choose_your_preferred_language">Please choose your preferred language</string>
    <string name="need_help">Need help ?</string>
    <string name="we_receive_all_your_inquiries_and_suggestions">We receive all your inquiries and suggestions</string>
    <string name="you_will_be_answered_via_email_as_soon_as">You will be answered via email as soon as</string>
    <string name="send_message">Send message</string>
    <string name="message">Message</string>
    <string name="type_a_message">Type a message ... </string>
    <string name="jd">JD</string>
    <string name="service_name">Service name : </string>
    <string name="waiting_accept_offer">Waiting accept offer</string>
    <string name="order_details">Order details : </string>
    <string name="order_detail">Order details</string>
    <string name="pictures">Pictures : </string>
    <string name="description">Description</string>
    <string name="order_date_and_time">Order date and time</string>
    <string name="location_information">Location information</string>
    <string name="hour_price">Hour price : </string>
    <string name="accept_offer">Accept offer</string>
    <string name="error_request_type">Error request type</string>
    <string name="update_successfully">Updated successfully</string>
    <string name="you_can_login_now">You can login now</string>
    <string name="old_password_is_required">Old password is required</string>
    <string name="your_password_has_been_updated_successfully">Your password has been updated successfully</string>
    <string name="not_found">Not found</string>
    <string name="your_profile_has_been_updated_successfully">Your profile has been updated successfully</string>
    <string name="uploading">Uploading</string>
    <string name="file_too_large">File too large</string>
    <string name="write">Write</string>
    <string name="edit">Edit</string>
    <string name="items">Items</string>
    <string name="select_location">Select location</string>
    <string name="upload_image">Upload image</string>
    <string name="select_time">Select time</string>
    <string name="time_should_not_be_older_then_this_time">Time should not be older then this time</string>
    <string name="wrong_time">Wrong time</string>
    <string name="order_extras">Order extras</string>
    <string name="filled">Filled</string>
    <string name="this_service_is_emergency_only">This service is emergency only</string>
    <string name="warning">Warning</string>
    <string name="no">No</string>
    <string name="this_service_is_emergency_but_paid">This service is emergency but paid</string>
    <string name="you_can_only_book_this_service_from">You can only book this service from</string>
    <string name="to">" to "</string>
    <string name="confirmed">Confirmed</string>
    <string name="cash">Cash</string>
    <string name="visa">Visa</string>
    <string name="select_drop_location">Select drop location</string>
    <string name="select_pick_up_location">Select pick up location</string>
    <string name="picking_up">Picking up</string>
    <string name="will_you_pick_it_up">Will you pick it up?</string>
    <string name="you_will_pick_it_up">You will pick it up</string>
    <string name="you_will_not_pick_it_up">You will not pick it up</string>
    <string name="remove_location">Remove location</string>
    <string name="add_new_address">Add New Address</string>
    <string name="search">Search</string>
    <string name="ex_home">Ex: home</string>
    <string name="building">Building : </string>
    <string name="floor">Floor : </string>
    <string name="wrong_location">Wrong location</string>
    <string name="please_select_location">Please select location</string>
    <string name="you_should_select_location">You should select location</string>
    <string name="missing_data">Missing data</string>
    <string name="please_fill_all_data">Please fill all data</string>
    <string name="error_to_register_with_socail_please_try_again">Error to register with social please try again</string>
    <string name="success">Success</string>
    <string name="your_order_sent_successfully">Your order sent successfully</string>
    <string name="error_to_login_with_socail_please_try_again">Error to login with social please try again</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="confirm_order">Confirm order</string>
    <string name="order_information">Order information</string>
    <string name="i_want_the_order_now">I want the order now</string>
    <string name="price_calculated">Price will be calculated based on traveled time and distance</string>
    <string name="pricing">Pricing:</string>
    <string name="price_range">Price Range:</string>
    <string name="you_will_recieve_offer">You will receive offers from our team shortly</string>
    <string name="error_calculating_price">Error calculating price</string>
    <string name="order_confirmation">Order confirmation</string>
    <string name="failed_to_hire">Failed to hire</string>
    <string name="there_is_no_available_worker">There is no available worker</string>
    <string name="Cancel_order">Cancel order</string>
    <string name="searching_for_providers">Searching for workers</string>
    <string name="jod">JOD</string>
    <string name="active">Active</string>
    <string name="history">History</string>
    <string name="delivery_price">Delivery price</string>
    <string name="service_price">Service price</string>
    <string name="total">Total</string>
    <string name="login">Login</string>
    <string name="register_new">Register new Account</string>
    <string name="Hello">Hello !!</string>
    <string name="register_or_create_a_new_account_to_log_in">Register or create a new account to \nlog in</string>
    <string name="facebook_link">Facebook link</string>
    <string name="twitter_link">Twitter link</string>
    <string name="youtube_link">Youtube link</string>
    <string name="instagram_link">Instagram link</string>
    <string name="linked_in_link">linkedIn link</string>
    <string name="apply_need">Apply need</string>
    <string name="choose_your_financial_need">Choose your financial need</string>
    <string name="the_desired_amount">The desired amount</string>
    <string name="another_amount">Another amount</string>
    <string name="case_details">Case details</string>
    <string name="message_secured">All messages relating to you are reserved and confidential to us and cannot For anyone to see but those in charge of this platform (Khairat House platform)</string>
    <string name="upload_your_documents">Upload your documents</string>
    <string name="add_your_documents">Add your documents</string>
    <string name="paper_types">Identity documents, identity, passport,etc.</string>
    <string name="type_here">Type here</string>
    <string name="your_wallet_is_empty_now">Your wallet is empty now</string>
    <string name="you_can_charge_your_wallet_and_then_donate">You can charge your wallet and then donate</string>
    <string name="charge">Charge</string>
    <string name="choose_your_country">Choose your country</string>
    <string name="choose_your_need_degree">Choose your need degree</string>
    <string name="case_title">Case title</string>
</resources>