<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.saad.baitalkhairat.ui.profilejourney.account.AccountViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/relativeUserNotRegistered"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/Hello"
                android:textColor="@color/night_blue"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/register_or_create_a_new_account_to_log_in"
                android:textColor="@color/night_blue"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_50sdp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_15sdp"
                android:background="@color/orange"
                android:onClick="@{()->viewModel.onLoginClicked()}"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:onClick="@{()->viewModel.onRegisterClicked()}"
                android:text="@string/register_new"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</layout>