<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.saad.baitalkhairat.ui.walletjourney.wallet.WalletViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/relativeListEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="230dp"
                android:layout_height="160dp"
                app:srcCompat="@drawable/ic_coin" />

            <TextView
                style="@style/bold_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/your_wallet_is_empty_now"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                style="@style/roman_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/you_can_charge_your_wallet_and_then_donate"
                android:textColor="@color/wallet_empty_gray"
                android:textSize="13sp" />

        </LinearLayout>

        <Button
            android:id="@+id/tvCharge"
            style="@style/bold_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:background="@color/orange"
            android:gravity="center"
            android:onClick="@{()-> viewModel.onChargeClick()}"
            android:text="@string/charge"
            android:textColor="@color/white" />

    </LinearLayout>

</layout>